Revision history for perl distribution Mojolicious-Plugin-OAuth2

1.54 Not Released
 - Removed deprecated helper get_authorize_url()
 - Removed deprecated helper get_token()

1.53 2015-09-08T09:27:17Z
 - Removed fix_get_token hack
 - Documented deprecation for get_authorize_url() and get_token()
 - Fix documentation regarding return value to oauth2->get_token() #45
 - Fix liftetime isn't a valid paramater in mocked response #47
 - Add more data to mocked response #47

1.52 2015-04-06T22:45:17Z
 - Add oauth2->get_token() works in blocking mode (Alexander Karelas)

1.51 2015-03-18T17:38:19Z
 - Fix get_token() need to return the whole data structure to the callback
   and not just $token.

1.5 2015-03-02T08:31:47Z
 - Able to mock interface for easy testing

1.4 2015-03-01T21:03:47Z
 - Fix handling of error in param, #27
 - Add new helper oauth2->auth_url
 - Add new helper oauth2->get_token
 - Add new helper oauth2->providers
 - Add eventbrite and github as providers
 - Deprecate on_xxx handlers
 - Started deprecation process for get_authorize_url() and get_token()

1.3 2014-10-07T08:00:00Z
 - Fix param injection security issue

1.2 2014-09-06T15:48:00Z
 - Tidy up the code with .perltidyrc and githook-perltidy
 - Started deprecation process of on_xxx handlers

1.1 2014-03-13T05:55:00Z
 - Update test suite to latest Mojo (Valcho Nedelchev)
 - Bugfix: When "charset" is included in Content-Type header,  token
   extraction failed.  (Colin Cyr)
 - permit altering the host on a request by request basis  (Colin Cyr)
 - fix typos (David Steinbrunner)

1.0 2013-11-02T16:34:00Z
 - Add state parameter
 - Handle user's refusal to auth
 - Doc updates

0.9 2013-05-20T07:51:00Z
 - Update to use new Mojolicious UA format (jht)
 - Remove deprecated render_text calls

0.8 2012-08-23T22:07:00Z
 - Add get_authorize_url() helper (Batman)
 - Support sync without callback.
 - Better Mojo::Delay integration (Batman)

0.7 2012-05-30T12:00:00Z
 - separate ua for oauth (Batman)