@@ -1,6 +1,8 @@
 Revision history for perl distribution Mojolicious-Plugin-OAuth2
 
 1.54 Not Released
+ - Add oauth2.get_token_p() helper
+ - Compatible with Mojolicious 7.90 #53
  - Removed deprecated helper get_authorize_url()
  - Removed deprecated helper get_token()
 
